--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@formspree/react": "^2.5.1",
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
+		"emailjs-com": "^3.2.0",
 		"framer-motion": "4.1.17",
 		"postcss-cli": "^10.1.0",
 		"react": "^18.1.0",
