--- a/package.json
+++ b/package.json
@@ -46,6 +46,10 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+		"@babel/plugin-proposal-optional-chaining": "^7.21.0",
+		"@babel/preset-env": "^7.25.8",
+		"@babel/preset-react": "^7.25.7",
 		"@tailwindcss/forms": "^0.5.2",
 		"@testing-library/dom": "^8.20.0",
 		"autoprefixer": "^10.4.7",
