--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "react-tailwindcss-portfolio",
 	"version": "0.1.0",
 	"private": true,
+	"homepage": "https://ru-developer.ru",
 	"dependencies": {
 		"@formspree/react": "^2.5.1",
 		"@testing-library/jest-dom": "^5.16.5",
@@ -9,6 +10,7 @@
 		"@testing-library/user-event": "^14.4.3",
 		"emailjs-com": "^3.2.0",
 		"framer-motion": "4.1.17",
+		"gh-pages": "^6.2.0",
 		"markdown-to-jsx": "^7.5.0",
 		"postcss-cli": "^10.1.0",
 		"react": "^18.1.0",
@@ -23,6 +25,8 @@
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -b master -d build",
 		"start": "react-scripts --openssl-legacy-provider start",
 		"build": "yarn run react-scripts build",
 		"test": "react-scripts test",
