--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "react-tailwindcss-portfolio",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://ru-developer.ru",
+	"homepage": "https://HubOl01.github.io/my_cv",
 	"dependencies": {
 		"@formspree/react": "^2.5.1",
 		"@testing-library/jest-dom": "^5.16.5",
@@ -25,8 +25,8 @@
 		"web-vitals": "^1.0.1"
 	},
 	"scripts": {
-		"predeploy": "npm run build",
-		"deploy": "gh-pages -b master -d build",
+		"predeploy": "yarn start build",
+		"deploy": "gh-pages -d build",
 		"start": "react-scripts --openssl-legacy-provider start",
 		"build": "yarn run react-scripts build",
 		"test": "react-scripts test",
