--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "react-tailwindcss-portfolio",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://HubOl01.github.io/my_cv",
+	"homepage": "https://HubOl01.github.io/",
 	"dependencies": {
 		"@formspree/react": "^2.5.1",
 		"@testing-library/jest-dom": "^5.16.5",
