--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "react-tailwindcss-portfolio",
 	"version": "0.1.0",
 	"private": true,
-	"homepage": "https://HubOl01.github.io/",
+	"homepage": "https://hubol01.github.io/my_cv/",
 	"dependencies": {
 		"@formspree/react": "^2.5.1",
 		"@testing-library/jest-dom": "^5.16.5",
@@ -28,7 +28,7 @@
 		"predeploy": "npm start build",
 		"deploy": "gh-pages -d build",
 		"start": "react-scripts --openssl-legacy-provider start",
-		"build": "yarn run react-scripts build",
+		"build": "NODE_OPTIONS=--openssl-legacy-provider react-scripts build",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
 		"build:css": "postcss src/css/tailwind.css -o src/css/main.css"
