--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
 		"react-dom": "^18.1.0",
 		"react-icons": "^4.3.1",
 		"react-router-dom": "^6.0.2",
-		"react-scripts": "4.0.3",
+		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.4",
 		"styled-components": "^5.3.3",
 		"vfile": "^6.0.3",
@@ -52,6 +52,7 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/core": "^7.16.0",
 		"@babel/plugin-proposal-object-rest-spread": "^7.20.7",
 		"@babel/plugin-proposal-optional-chaining": "^7.21.0",
 		"@babel/preset-env": "^7.25.8",
@@ -61,5 +62,9 @@
 		"autoprefixer": "^10.4.7",
 		"postcss": "^8.4.21",
 		"tailwindcss": "^3.0.24"
-	}
+	},
+	"presets": [
+		"@babel/preset-env",
+		"@babel/preset-react"
+	]
 }
