--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "react-tailwindcss-portfolio",
+	"name": "my_cv",
 	"version": "0.1.1",
 	"private": true,
 	"homepage": "https://hubol01.github.io/my_cv/",
