--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/jest-dom": "^5.16.5",
 		"@testing-library/react": "^13.4.0",
 		"@testing-library/user-event": "^14.4.3",
+		"@vercel/analytics": "^1.5.0",
 		"emailjs-com": "^3.2.0",
 		"framer-motion": "4.1.17",
 		"gh-pages": "^6.2.0",
@@ -16,6 +17,7 @@
 		"react-countup": "^6.1.1",
 		"react-dom": "^18.1.0",
 		"react-icons": "^4.3.1",
+		"react-metrika": "^0.3.3",
 		"react-router-dom": "^6.0.2",
 		"react-scripts": "^5.0.1",
 		"react-scroll": "^1.8.4",
